wp-content/themes/mozr-custom/style.css
/*
Theme Name: Mozr Custom Theme
Theme URI: http://www.mozr.com
Version: 1.0.0
Template: twentysixteen

*/
@import url('https://fonts.googleapis.com/css?family=Montserrat');
@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');

/* desert scheme ported from vim to google prettify */
pre.prettyprint { display: block; background-color: #333; overflow-y: hidden;     padding: 8px !important;
  font-size: 12px;}
pre .nocode { background-color: none; color: #000 }
pre .str { color: #ffa0a0 } /* string  - pink */
pre .kwd { color: #f0e68c; font-weight: bold }
pre .com { color: #87ceeb } /* comment - skyblue */
pre .typ { color: #98fb98 } /* type    - lightgreen */
pre .lit { color: #cd5c5c } /* literal - darkred */
pre .pun { color: #fff }    /* punctuation */
pre .pln { color: #fff }    /* plaintext */
pre .tag { color: #f0e68c; font-weight: bold } /* html/xml tag    - lightyellow */
pre .atn { color: #bdb76b; font-weight: bold } /* attribute name  - khaki */
pre .atv { color: #ffa0a0 } /* attribute value - pink */
pre .dec { color: #98fb98 } /* decimal         - lightgreen */
.color-blue{color: #3D3DA3 !important}
.color-darkblue{color: #2A2A30 !important}
.color-white{color: white !important;}
/* Specify class=linenums on a pre to get line numbering */
ol.linenums { margin-top: 0; margin-bottom: 0; color: #AEAEAE } /* IE indents via margin-left */
li.L0,li.L1,li.L2,li.L3,li.L5,li.L6,li.L7,li.L8 { list-style-type: none }
/* Alternate shading for lines */
li.L1,li.L3,li.L5,li.L7,li.L9 { }

@media print {
  pre.prettyprint { background-color: none }
  pre .str, code .str { color: #060 }
  pre .kwd, code .kwd { color: #006; font-weight: bold }
  pre .com, code .com { color: #600; font-style: italic }
  pre .typ, code .typ { color: #404; font-weight: bold }
  pre .lit, code .lit { color: #044 }
  pre .pun, code .pun { color: #440 }
  pre .pln, code .pln { color: #000 }
  pre .tag, code .tag { color: #006; font-weight: bold }
  pre .atn, code .atn { color: #404 }
  pre .atv, code .atv { color: #060 }
}

li.L0, li.L1, li.L2, li.L3, li.L4,
li.L5, li.L6, li.L7, li.L8, li.L9 {
  list-style-type: decimal;
} 
.prettyprint ul {
    list-style-type: disc !important;
    padding-left: 2em;
}
.prettyprint ol {
    list-style-type: none !important;
    padding-left: 0em;
}

.prettyprint li{
      padding-left: 15px;
}
.codestyle li.L0, .codestyle li.L1, .codestyle li.L2, .codestyle li.L3,
.codestyle li.L5, .codestyle li.L6, .codestyle li.L7, .codestyle li.L8 {
  list-style-type: decimal !important;
  
}
.consoleStyleAll li:before {
  content: "$";
  padding-right: 5px;
}
.consoleStyleFirst li:first-child:before {
  content: "$";
  padding-right: 5px;
  margin-left: -10px;
}
blockquote{
  border: 0 solid #F75737;
  border-left-width: 4px;
  color: #686868;
  font-size: 19px;
  font-size: 1.1875rem;
  font-style: italic;
  line-height: 1.4736842105;
  margin: 0 0 1.4736842105em;
  overflow: hidden;
  padding: 0 0 0 1.263157895em;
}
.consoleStyleFirst li{
  padding-right: 5px;
}
.codestyle li:before {
  display: none !important;
  
}
.removeBashStyle:before{
  display: none !important;
}

html, body, .site, .site-container, .site-content{
  height: 100%;
  min-height: 100%;
}

li.L1, li.L3, li.L5, li.L7, li.L9 {
    background: #333 !important;
}

@media screen and (min-width: 61.5625em)
{
  .custom-logo {
      max-width: 110px;
  }
}
.uptime-container{
  padding-bottom: 80px;
}
.uptime-container h1{
  color: #353535 !important;
  font-size: 50px;
}
.mozr-page-title{
  position: absolute;top: 28%;
}
.white{
  color:white;
}
.CDN-container, .security-container{
  background-color: #F7F6F5;
}
.performance-grey-bk{
  background-color: #F7F6F5;
}
.performance-hosting-platform{
  padding-top: 100px;
  padding-bottom: 50px;
}
.padding-3-percent{
  padding: 3%;
}
.footer-link{
  cursor: pointer;
}
footer .site-title a:hover{
  color: white;
  text-decoration: none;
}
.margin-top-0{
  margin-top: 0px !important;
}
.bitnami-corner-image-div{
  display: none !important;
}
.z-index-1{
  z-index: 1;
}
.z-index-99{
  z-index: 99;
}
.sign-up-button{
  width: 133px;
}
.woocommerce-logo{
  width:78%;
}
.center-text{
  text-align: center;
}
.amazon-cloudfront{
  border: solid 1px lightgrey;
  padding: 60px 20px;
}
.container .margin-y-100{
  margin: 100px 0px;
}
.margin-bottom-100{
  margin-bottom: 100px;
}
.mozr-template-icon{
  width: 15%;
}
.container .margin-top-150{
  margin-top: 150px;
}

.container .margin-y-50{
  margin: 50px 0px;
}

.margin-bottom-50{
  margin-bottom: 50px;
}

#page{
  margin: 0px !important;
}

body:before{
  height: 0px !important;
}

#masthead{
      padding: 0px 15px;
}

.links-post a{
  font-size: 13px;
  font-family: 'Open Sans', sans-serif;
  color: black;
}

.codestyle li {		
 list-style-type: decimal !important;		
}		

.codestyle ol {		
  padding-left: 2em;		
}
  

#tldr{
    font-family: 'Open Sans', sans-serif;
    font-size: 13px;
    background-color: #F1F1F2;
    padding: 30px 40px;
}

.select-category{
  float: right;
  width: 180px;
  height: 40px;
  border-radius: 0px !important;
  background: no-repeat;
  font-family: 'Open Sans', sans-serif;
  background-color: #F1F1F2;
  border: none;
  font-size: 12px;
  -webkit-appearance: none;
  padding-left: 10px;
  position: relative;
  top: -10px;

  background-image: url('../../../download.svg');
  background-size: 16px 7px;
  background-position: right 5px center;
  -webkit-background-origin: content-box;
  background-origin: content-box;
  background-repeat: no-repeat;
  background-position-y: 15px;
}

.select-category:focus{
  outline: none;
}


.site-header-menu{
      margin-top: 5px;
    margin-bottom: 5px;
}

.site-branding{
      margin-top: 15px;
    margin-bottom: 15px;
}

#menu-main li{
  font-size: 13px;
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
}

body{
  background: white !important;
}
/* ... */

